test push trigger

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <form action="#">
           <fieldset> 
             <p>
-              This is a chat room. You must enter your nick name to enter chat room.
+              This is a chat room. You must enter your nick name to enter chat room - for demo
             </p>
 
             <label for="nick">Name</label>
