--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           <fieldset> 
             <p>
               This is a chat room. You must enter your nick name to enter chat room - for demo
+              Even it is for testing
             </p>
 
             <label for="nick">Name</label>
